2009-09-04  Laszlo Gombos  <laszlo.1.gombos@nokia.com>

        Unreviewed, build fix.

        Remove remaining references to UserStyleSheetLoader after r48075.

        * WebCore.gypi:
        * WebCore.xcodeproj/project.pbxproj:
        * page/qt/FrameQt.cpp:
        * page/wince/FrameWince.cpp:

2009-09-04  Michelangelo De Simone  <micdesim@gmail.com>

        Reviewed by David Levin.

        https://bugs.webkit.org/show_bug.cgi?id=28988
        Minor fix: "novalidate" attribute renamed in "noValidate", according to
        HTML5 specs:
        http://www.whatwg.org/specs/web-apps/current-work/#dom-fs-novalidate

        * html/HTMLFormElement.cpp:
        (WebCore::HTMLFormElement::noValidate):
        (WebCore::HTMLFormElement::setNoValidate):
        * html/HTMLFormElement.h:
        * html/HTMLFormElement.idl:

2009-09-04  Dmitry Titov  <dimich@chromium.org>

        Reviewed by David Levin.

        Remove unused line of code from WorkerContext
        https://bugs.webkit.org/show_bug.cgi?id=28990

        * workers/WorkerContext.cpp:
        (WebCore::WorkerContext::importScripts):

2009-09-04  Darin Adler  <darin@apple.com>

        Reviewed by Oliver Hunt.

        Fix assertion seen when running buildbot.

        * bindings/js/JSDOMBinding.h:
        (WebCore::DOMObjectWithGlobalPointer::createStructure): Create the structure without
        the HasDefaultMark bit since this has a custom mark function.

2009-09-04  Dave Hyatt  <hyatt@apple.com>

        Reviewed by Adam Roben.

        https://bugs.webkit.org/show_bug.cgi?id=28984, remove the remote stylesheet loader on Mac/Qt.
        Make sure the other code path (now used by everybody) can handle data URLs.

        As per the post on webkit-dev, the ability to work remotely isn't working properly anyway (it doesn't
        hold up the pending sheet count, so you'd just FOUC on every Web page), and it's extremely unlikely
        that anybody is relying on this support.
        